# scratch-jit

./: Cargo.toml  Makefile.toml  README.md  shell.nix
parser/: Cargo.toml  LICENSE-MIT
parser/src/: lib.rs  project.rs
parser/src/project/: meta.rs  sprite.rs
parser/src/project/sprite/: block.rs  costume.rs  list.rs  op_codes.rs  value.rs  variable.rs
parser/src/snapshots/: scratch_edu_parser__tests__deserialize_works_formatted.snap  scratch_edu_parser__tests__simple_deserialize_works.snap
parser/tests/: Transpiler Test Project(1).sb3  Transpiler Test Project.sb3  formatted.json  project.json  simple.json
src/: main.rs  renderer.rs
tests/: Transpiler Basic Test.sb3  test.sb3
vm/: Cargo.toml
vm/src/: interpreter.rs  main.rs  renderer.rs  unpack.rs
