[package]
name = "scratch-edu-parser"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.9.1", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[dev-dependencies]
insta = "1.18.2"
