[package]
name = "scratch-bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
clap = { version = "3.2.20", features = ["derive"] }
scratch-edu-parser = { path = "../parser" }
serde_json = "1.0.85"
temp-dir = "0.1.11"
zip = { version = "0.6.2", default-features = false, features = [ "deflate" ] }
